# FirmRCA

./: .gitignore  README.md  config.yml  main.py  requirements.txt
pomp/: .gitignore  configure.ac  configure~
pomp/include/: arm_define.h  bjtime.h  elf_binary.h  elf_core.h  global.h  inst_data.h  insthandler_arm.h  reverse_log.h  thread_selection.h
pomp/src/: Makefile.am  alias_manager.c  analyze_result.c  disassemble.c  handler_arm.c  instruction_resolver.c  process_input.c  re_dsmanager.c  re_insttable_arm.c  re_mem_alias.c
pompplusplus/: configure~
pompplusplus/include/: access_memory.h  bintrace.capnp.h  bjtime.h  disassemble.h  elf_core.h  global.h  heuristics.h  inst_opd.h  re_alias.h  re_runtime.h  re_valueset.h  reverse_exe.h  reverse_log.h  thread_selection.h
pompplusplus/src/: Makefile.am  access_memory.c  alias_manager.c  bin_alias.c  global.c  handler_arm.c  heuristics.c  re_insttable_arm.c  re_opdvalue.c  re_runtime.c  re_valueset.c  re_vsmanager.c  reverse_execution.c  reverse_log.c
src/: .gitignore  Makefile.am  configure.scan
src/include/: access_memory.h  bjtime.h  common.h  heuristics.h  insthandler_arm.h  re_alias.h  re_stackpointer.h  reverse_log.h  simpleelf.h
src/src/: Makefile.am  bintrace.capnp.c  disassemble.c  global.c  inst_handle_resolve.c  re_dsmanager.c  re_insttable_arm.c  re_opdvalue.c  reverse_instructions.c
test_c_capnproto/: bintrace.capnp  bintrace.capnp.c  bintrace.capnp.h
